--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "primeicons": "^4.1.0",
     "primeng": "^11.3.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.16.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
