--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.2.4",
     "@angular/platform-browser-dynamic": "~10.2.4",
     "@angular/router": "~10.2.4",
+    "@auth0/angular-jwt": "^5.0.2",
     "moment": "^2.29.1",
     "primeicons": "^4.1.0",
     "primeng": "^11.3.1",
