--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "primeicons": "^4.1.0",
     "primeng": "^11.3.1",
     "rxjs": "~6.6.0",
+    "shortid": "^2.2.16",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
